--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
              <div class="brand"><h1><span>G</span>eorge <span>P</span>olizoidis</h1></div>
              <div class="social-icon">
                  <div class="social-item">
-                     <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/"><img src="https://img.icons8.com/bubbles/50/000000/facebook-new.png"/></a>
+                     <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/"><img src="images\icons8-facebook-50.png"/></a>
                  </div>
                  <div class="social-item">
-                    <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/"><img src="https://img.icons8.com/bubbles/50/000000/instagram.png"/></a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/"><img src="images\icons8-instagram-50.png"/></a>
                 </div> 
                 <div class="social-item">
-                    <a target="_blank" rel="noopener noreferrer" href="https://twitter.com"><img src="https://img.icons8.com/bubbles/50/000000/twitter.png"/></a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://twitter.com"><img src="images\icons8-twitter-circled-50.png"/></a>
                 </div> 
             </div>
             <p>Copyright © 2020. All rights reserved</p>       
