--- a/projects.html
+++ b/projects.html
@@ -103,7 +103,7 @@
                     <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/"><img src="https://img.icons8.com/bubbles/50/000000/instagram.png"/></a>
                 </div> 
                 <div class="social-item">
-                    <a target="_blank" rel="noopener noreferrer" href="https://twitter.com"><img src="https://img.icons8.com/bubbles/50/000000/twitter.png"/></a>
+                    <a target="_blank" rel="noopener noreferrer" href="https://twitter.com"><img src="https://icons8.com/icon/eeQY_dRSUIMV/twitter-circled"/></a>
                 </div> 
             </div>
             <p>Copyright © 2020. All rights reserved</p>       
